# wireless_atem_camera_control_and_tally

./: README.md  TODO.md  changelog.md  waccat_firmware_single_source.h
arduino/: arduino.ino  arduino_install  arduino_install.bat  arduino_install.ps1  arduino_install.py  atem.c  atem.h  html_template_engine.h  install  install.bat  install.sh  qrcode_generator.html  qrcode_generator.sh  user_config.h  waccat_firmware_single_source.h
arduino/src/: atem.c  atem_sock.c  dns.c  flash.c  http.c  i2c.c  sdi.c  (+6 more)
core/: atem.c  atem.h  atem_posix.c  atem_posix.h  atem_protocol.h
doc/: atem_camera_control_protocol.md  atem_camera_control_protocol.txt  atem_protocol.md  atem_protocol.txt
firmware/: atem_sock.c  atem_sock.h  debug.h  dns.c  dns.h  flash.c  flash.h  flash_esp8266_nonos.c  flash_esp_idf.c  flash_tapif.c  http.c  http.h  http_respond.c  http_respond.h  i2c.h  i2c_esp8266_nonos.c  i2c_esp_idf.c  init.c  init.h  led.h  main_esp8266_nonos.c  main_esp_idf.c  main_tapif.c  sdi.c  sdi.cpp  sdi.h  sensors.h  sensors_esp_idf.c  udp.c  udp.h  user_config.h  version.h  wlan.c  wlan.h  ws2812.h  ws2812_esp_idf.c
proxy/: async.c  async.h  atem_assert.c  atem_assert.h  atem_cache.c  atem_cache.h  atem_debug.c  atem_debug.h  atem_packet.c  atem_packet.h  atem_server.c  atem_server.h  atem_session.c  atem_session.h  main.c  makefile  timeout.c  timeout.h
proxy_server/: atem_connection.c  atem_connection.h  atem_extra.h  binding_cf.m  cache.c  cache.h  debug.h  main.c  makefile  relay.c  relay.h  server.c  server.h  timer.c  timer.h  timer_unix.h  udp.c  udp.h  udp_unix.c  udp_unix.h  udp_win.h
research/: atem_byte_8_and_9.md  atem_cc_protocol_analisys.txt  checksum.md  checksum.txt  gain_issue.md  list_bluetooth_devices.html  tally_cmd_len.md
src/: atem.c  atem.h  atem_private.h  atem_protocol.h
test/: README.md  arduino.mk  client.c  handshake_server.c  handshake_server.h  helpers.c  helpers.h  main.c  makefile  proxy.c
tools/: configure.sh  generate_preset.sh  generate_preset_script.sh
tools/esp_idf_build/: CMakeLists.txt  build.cmake
(+153 files in other folders)
